Updating how we set the base elemenbt in standalone. We need the base to be '/' so the relative urls use root paths

--- a/web/pkg/opni/index.html
+++ b/web/pkg/opni/index.html
@@ -5,13 +5,10 @@
     <script>
         const url = window.location.href;
         const prefixRegex = /.*proxy\//gm;
-        if (prefixRegex.test(url)) {
-            const match = url.match(prefixRegex);
-
-            const base = document.createElement('base');
-            base.href = match[0];
-            document.getElementsByTagName('head')[0].prepend(base);
-        }
+        const base = document.createElement('base');
+        
+        base.href = prefixRegex.test(url) ? url.match(prefixRegex)[0] : '/';
+        document.getElementsByTagName('head')[0].prepend(base);
     </script>
 
     <meta charset="utf-8">
